# university

university/wste/2/Kolko_i_Krzyzyk/Kolko_i_Krzyzyk/: Kolko_i_Krzyzyk.vcxproj  Kolko_i_Krzyzyk.vcxproj.filters  MyGame.cpp  MyGame.h  main.cpp  resource.h
university/wste/2/STL/: .cproject  CMakeLists.txt  main.cpp
university/wste/2/UT/: CMakeLists.txt  README.txt  auto.hpp  test.cpp  vector.cpp
university/wste/2/angelikaalicja/Quiz-project/: CMakeLists.txt  diagram_klas.xml  game.cpp  game.h  main.cpp  main_test.cpp  operatingfunctions.cpp  operatingfunctions.h  question.cpp  question.h  quiz.cpp  quiz.h
university/wste/2/angelikaalicja/projekt-WSTE/: CMakeLists.txt  Game.cpp  Game.h  main.cpp  main_test.cpp  question.cpp  question.h  quiz.cpp  quiz.h  quiz_.txt  quiz_2.txt  test.cpp
university/wste/2/containers/: CMakeCache.txt  CMakeLists.txt  Makefile  Vector  cmake_install.cmake  test.cpp  vector.cpp
university/wste/2/elf/: a.out  main.cpp
university/wste/2/google_googletest/: .cproject  .project  CMakeLists.txt  pytania.txt
university/wste/2/google_googletest/app/: CMakeLists.txt  RTurtle.cpp  RTurtle.h  Stage.cpp  Stage.h  Turtle.cpp  Turtle.h  main.cpp
university/wste/2/google_googletest/app_test/: CMakeLists.txt  Turtle_test.h  main.cpp
university/wste/2/testing/mock/: .cproject  .project  App.cpp  App.hpp  App_test.cpp  CMakeLists.txt  main.cpp
university/wste/2/testing/test/containers/: auto.hpp  vector.cpp
university/wste/2/tests/tests/: .cproject  README.md  c++_1.txt  stl_3.txt
university/wste/2/wste_gmock/: .cproject  .project  CMakeLists.txt  setup.sh
university/wste/2/wste_gmock/app/: CMakeLists.txt  RTurtle.cpp  RTurtle.h  Stage.cpp  Stage.h  Turtle.cpp  Turtle.h  main.cpp
university/wste/2/wste_gmock/app_test/: CMakeLists.txt  MockTurtle.cpp  MockTurtle.h  main.cpp
university/wste/3/UT/hello_world_easy_unit_test/: CMakeLists.txt  compile.sh
university/wste/3/UT/hello_world_easy_unit_test/hello_world_program/: .project  CMakeLists.txt  inOut.cpp
university/wste/3/UT/hello_world_easy_unit_test/hello_world_program_tests/: .cproject  logic  main.cpp  test.cpp
university/wste/3/UT/hello_world_gtest/: CMakeLists.txt  setup.sh
university/wste/3/UT/hello_world_gtest/hello_world_program_tests/: CMakeLists.debug.txt  CMakeLists.txt
university/wste/3/intro_c++/proj_01_makefile/: Makefile  Makefile2  Makefile3  Makefile4
university/wste/3/intro_c++/proj_02_cmake/: function.cpp  main.cpp
university/wste/3/intro_c++/proj_04_float_compare/: a.out
university/wste/3/intro_c++/proj_06_reverse_string/: a.out
university/wste/3/intro_c++/proj_07_concatenate_two_tables/: a.out
university/wste/3/proj_02_cmake/: CMakeLists.txt
university/wste/3/proj_03_numbers/: a.out  main.cpp
university/wste/3/proj_04_float_compare/: main.cpp
university/wste/3/proj_05_string_copy/: a.out  main.cpp
university/wste/3/proj_06_reverse_string/: main.cpp
university/wste/3/proj_07_concatenate_two_tables/: main.cpp
university/wste/3/soft_test_ut/hello_world/projekt/: main.cpp
university/wste/3/soft_test_ut/hello_world/test/: logic  main.cpp  test.cpp  (+1 more)
university/zut/1/cpp_basics/: a.out  main.cpp
university/zut/notes_generator/: notes.cc
(+10 files in other folders)
